@@ -4,6 +4,7 @@ import co.edu.uco.asistenciauco.application.outputport.redis.MessageCatalog;
 import co.edu.uco.asistenciauco.application.outputport.repository.EstudianteGrupoRepository;
 import co.edu.uco.asistenciauco.application.usecase.validator.ValidationResultVO;
 import co.edu.uco.asistenciauco.application.usecase.validator.Validator;
+import co.edu.uco.asistenciauco.crosscutting.exceptions.ValidatorAsisteUcoException;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
@@ -26,7 +27,7 @@ public class ValidarQueEstudianteNoCancelo implements Validator<ArrayList<UUID>,
 		var resultadoValidacion = new ValidationResultVO();
 		
 		if(estudianteGrupoRepository.existsBySesionAndEstudianteNoCancelo(data.get(0), data.get(1))) {
-			resultadoValidacion.agregarMensaje(messageCatalog.getMessage("validarqueestudiantenocanceloparteuno") + data.get(0) + messageCatalog.getMessage("validarqueestudiantenocancelopartedos"));
+			resultadoValidacion.agregarMensaje(messageCatalog.getMessage("validarqueestudiantenocanceloparteuno") + data.getFirst() + messageCatalog.getMessage("validarqueestudiantenocancelopartedos"));
 		}
 		
 		return resultadoValidacion;
